[package]
name = "rend"
description = "Cross-platform, endian-aware primitives for Rust"
version = "0.5.0-alpha.7"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/djkoloski/rend"
keywords = ["endian", "no_std"]
categories = ["encoding", "no-std"]
documentation = "https://docs.rs/rend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { version = "0.8.0-alpha.9", optional = true, default-features = false }

[features]
default = []
